implement feedback from talk